fix approach section to display properly on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -418,9 +418,10 @@ div.panel {
 
 .philosophy-section {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
+  /*height: 100vh;*/
   /*height: 25em;*/
-  overflow: hidden;
+  overflow: hidden; 
   margin: 0 auto;
   padding-bottom: 2em;
   background-image: url("../img/bright-squares.png");
@@ -432,6 +433,16 @@ div.panel {
 
 .philosophy-section:before {
   
+}
+
+#philosophy-toggle-content {
+  
+}
+
+#philosophy-toggle-content-button {
+  padding: 5px;
+  text-align: center;
+  border: 1px solid #fff;
 }
 
 .philosophy-section h1 {
